--- a/index.html
+++ b/index.html
@@ -126,6 +126,33 @@
         </div>
      </section>
 
+     <section class="blog">
+        <div class="container">
+            <div>
+                <h2 class="team">
+                    Our Team
+                </h2>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <div>
+                        <img src="https://bootstrapmade.com/content/demo/Bootslander/assets/img/team/team-1.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div>
+                        <img src="https://bootstrapmade.com/content/demo/Bootslander/assets/img/team/team-2.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div>
+                        <img src="https://bootstrapmade.com/content/demo/Bootslander/assets/img/team/team-3.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </div>
+     </section>
+
 
     <!-- offcanvas -->
     <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
